una banda de cosas